---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: ???

  Features:
    - Reworked custom attack group spawning position selection workflow.
    - Reworked custom attack group attack target selection workflow.

  Changes:
    - Changed Build style default setting to "Build a town".

---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 2021-09-03

  Bugfixes:
    - Turn off debug mode.

---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2021-09-03

  Features:
    - ---- Dropship Squad ----
    - Can be enable in setting and set its chance to spawn. Default to ON.
    - Flying units squad must be enabled as prerequisite.
    - Each unit cost 150 attack meter points.  Default 3000 points spawns 20 units.
    - ---- END Dropship Squad ----
    - ---- Squad Subtype: Precision Strike ----
    - The squads with this subtype go straight to inner base targets, bypass your defense.
    - Targets the area within 32 radius of any rocket-silo, artillery or mining-drill.
    - Dropship squad is always a precision strike squad.
    - Flying units squad can be configure to have this feature.  Default to OFF.
    - Strike location will be warn on the map. This option can be turn off.  Default to ON.
    - ---- END Squad Subtype: Precision Strike Squad ----
    - ---- FREE FOR ALL MODE [Experimental feature] ----
    - /ERM_FFA command enable Free For All mode.  It can be toggle on and off.  Enemy races will fight each other.
    - This feature may have performance implication.
    - This command limits to max enemy level 5 and 10.
    - High level units are excluded because unit spawns quicker than they die and cause performance issue.
    - Not recommend to use FFA on a death world map. They may never stop fighting and kill your performance.