@@ -9,6 +9,10 @@ Date: ???
   Changes:
     - Changed Build style default setting to "Build a town".
 
+  Bugfix:
+    - Fix config cache for enemyracemanager-mapping-method
+    - Fix negative and positive race using opposite coordinates.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.1
 Date: 2021-09-03
